# lmp

./: .gitignore  .gitmodules  CODEOWNERS  Makefile  README.md  add Indicators.md  add_Indicators.md  config.yaml  dd.txt  dd_syscall.txt  docker-compose.yml  ftrace_dd.txt  go.mod  go.sum  install.sh  main.go  makefile  nginx.conf  readme.2.md  runqlen.c  test.txt  togithub.sh
MagicEyes/: CMakeLists.txt  README.md
MagicEyes/docs/: ToDo.md
MagicEyes/src/backend/: CMakeLists.txt  README.md
MagicEyes/src/backend/01_sample/: CMakeLists.txt  README.md
MagicEyes/src/backend/01_sample/bpf/: README.md
MagicEyes/src/backend/01_sample/collector/: README.md
MagicEyes/src/backend/01_sample/docs/: README.md
MagicEyes/src/backend/01_sample/etc/: README.md
MagicEyes/src/backend/01_sample/include/: README.md
MagicEyes/src/backend/01_sample/scripts/: README.md
MagicEyes/src/backend/01_sample/tests/: README.md
MagicEyes/src/backend/bpf_common_helper/: README.md  syscall_helpers.c
MagicEyes/src/backend/component_helper/: README.md  list.h  rbtree.h
MagicEyes/src/backend/fs/fs_watcher/: CMakeLists.txt  README.md
MagicEyes/src/backend/fs/fs_watcher/bpf/: CacheTrack.bpf.c  block_rq_issue.bpf.c  disk_io_visit.bpf.c  open.bpf.c  read.bpf.c  write.bpf.c
MagicEyes/src/backend/fs/fs_watcher/collector/: README.md
MagicEyes/src/backend/fs/fs_watcher/include/: fs_watcher.h  open.h  read.h  write.h
MagicEyes/src/backend/fs/fs_watcher/src/: README.md  fs_watcher.c  open.c  read.c  write.c
MagicEyes/src/backend/hypervisor/kvm_watcher/: CMakeLists.txt  README.md
MagicEyes/src/backend/hypervisor/kvm_watcher/bpf/: kvm_watcher.bpf.c
MagicEyes/src/backend/hypervisor/kvm_watcher/docs/: Hypercall.md  kvm_exit.md  kvm_mmu.md
MagicEyes/src/backend/hypervisor/kvm_watcher/include/: common.h  kvm_hypercall.h  kvm_ioctl.h  kvm_irq.h  vmlinux.h
MagicEyes/src/backend/hypervisor/kvm_watcher/src/: kvm_watcher.c
MagicEyes/src/backend/memory/: README.md  memleak.bpf.c  memleak.c  oomkill.bpf.c  oomkill.c  oomkill.h  procstat.bpf.c  procstat.c  sysstat.c
MagicEyes/src/backend/memory/mem_watcher/: CMakeLists.txt  Makefile
MagicEyes/src/backend/memory/mem_watcher/bpf/: drsnoop.bpf.c  numafraginfo.bpf.c  oomkiller.bpf.c  procstat.bpf.c  vmasnap.bpf.c
MagicEyes/src/backend/memory/mem_watcher/include/: fraginfo.h  mem_watcher.h
MagicEyes/src/backend/memory/mem_watcher/src/: mem_watcher.c  page_fault.c
MagicEyes/src/backend/net/delay_analysis/: CMakeLists.txt  README.md
MagicEyes/src/backend/net/delay_analysis/bpf/: delay_analysis.bpf.c
MagicEyes/src/backend/net/delay_analysis/etc/: nettrace.yaml
MagicEyes/src/backend/net/delay_analysis/src/: delay_analysis.c
MagicEyes/src/backend/net/net_watcher/: CMakeLists.txt
MagicEyes/src/backend/net/net_watcher/bpf/: common.bpf.h  drop.bpf.h  icmp.bpf.h  mysql.bpf.h  mysql_helper.bpf.h  net_watcher.bpf.c  netfilter.bpf.h  packet.bpf.h  redis_helper.bpf.h  tcp.bpf.h
MagicEyes/src/backend/net/net_watcher/include/: dropreason.h  net_watcher.h
MagicEyes/src/backend/net/net_watcher/src/: net_watcher.c
MagicEyes/src/backend/process/: README.md
MagicEyes/src/backend/process/cpu_watcher/: CMakeLists.txt  Makefile  README.md
MagicEyes/src/backend/process/proc_image/: CMakeLists.txt
MagicEyes/src/backend/system_diagnosis/stack_analyzer/: CMakeLists.txt  bpf  include  src
MagicEyes/src/bridge/: CMakeLists.txt  README.md
MagicEyes/src/bridge/frame_graph_bridge/: README.md
MagicEyes/src/bridge/prometheus_bridge/: README.md
MagicEyes/src/cpu_watcher/: Makefile  cpu_watcher.c
MagicEyes/src/cpu_watcher/bpf/: sar.bpf.c
MagicEyes/src/execution_manager/: README.md
MagicEyes/src/magic_eyes_cli/: CMakeLists.txt  README.md  before_running.sh  magic_eyes_cli  requirements.txt
MagicEyes/src/magic_eyes_cli/backend_tool_modules/: README.md  cpu_watcher.py
MagicEyes/src/magic_eyes_cli/core/: cli_arg_parser.py  filesystem.py  tool_module_index.py
MagicEyes/src/visualization/: README.md  run_images.sh
MagicEyes/src/visualization/vscode_ext/: README.md  lmp_grafana-vscode-0.0.16.vsix  lmp_vscode_ext_0.01.vsix
MagicEyes/src/visualization/vscode_ext/lmp_ext_vscode/: .gitignore  CHANGELOG.md  README.md  how-it-works.md  package.json
MagicEyes/src/visualization/vscode_ext/tool_config_sample/: lmp_tool_ext_config.json
MagicEyes/tools/cmake/: FindBpfObject.cmake
eBPF_Supermarket/Auto_Cluster_Deployer/restful_api/: .env  Cargo.toml
eBPF_Supermarket/Auto_Cluster_Deployer/restful_api/src/: auth.rs  deployment_packages.rs  deployment_tasks.rs  main.rs  model.rs  server_group_members.rs  server_groups.rs  servers.rs
eBPF_Supermarket/Auto_Cluster_Deployer/tonic/server_tonic/: Cargo.toml  build.rs
eBPF_Supermarket/Auto_Cluster_Deployer/tonic/server_tonic/proto/: server_tonic.proto
eBPF_Supermarket/Auto_Cluster_Deployer/tonic/server_tonic/src/: client.rs  server.rs
eBPF_Supermarket/Network_Subsystem/ebpf_dns_cache/: Cargo.toml  README.md
eBPF_Supermarket/Network_Subsystem/ebpf_dns_cache/src/: utils.rs
eBPF_Supermarket/Network_Subsystem/ebpf_dns_cache/src/bpf/: dns_queries.bpf.c
eBPF_Supermarket/Network_Subsystem/ebpf_dns_cache/visualization/: DNS Cache-1665678419233.json  prometheus.yml
eBPF_Supermarket/User_Function_Tracer/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md
eBPF_Supermarket/User_Function_Tracer/src/: CMakeLists.txt  demangle.c  demangle.h  elf.c  elf.h  env.h  gdb.c  gdb.h  glob.c  glob.h  log.c  log.h  module.c  module.h  printer.c  record.h  report.h  symbol.c  symbol.h  thread_local.c  thread_local.h  util.c  util.h  utrace.bpf.c  utrace.c  utrace.h  vector.c  vector.h  vmap.c  vmap.h  vmem.c  vmem.h
eBPF_Supermarket/User_Function_Tracer/test/: args.c  bench.cpp  fib.c  mmap  mmap.c  run_test.sh  short.c  sleep.c  strcpy.c  test.c  thread.c
eBPF_Supermarket/ebpf_dns_cache/probe/: Cargo.toml
eBPF_Supermarket/ebpf_dns_cache/probe/src/: main.rs
eBPF_Supermarket/ebpf_dns_cache/userspace/: Cargo.toml  build.rs
eBPF_Supermarket/ebpf_dns_cache/userspace/src/: main.rs
(+2681 files in other folders)
