set(MAGIC_EYES_CLI_INSTALL_DIR magic_eyes_cli)

# 安装 MagicEyesCli 到 <intsall_dir>/sbin/

# 安装magic_eyes_cli文件夹到 <install_dir>/sbin/

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
        DESTINATION ${MAGIC_EYES_CLI_INSTALL_DIR}
)

install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/magic_eyes_cli
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE
        DESTINATION ${MAGIC_EYES_CLI_INSTALL_DIR})
        
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/before_running.sh
PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE
DESTINATION ${MAGIC_EYES_CLI_INSTALL_DIR})
