[package]
name = "restful_api"
version = "0.1.0"
authors = ["zxy <zhangxy1016304@163.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json", "tls"] }
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
time = "0.3"
syn = { version = "1.0", features = ["derive", "parsing"] }
bcrypt = "0.10"
async-std = "1.10"
rocket_okapi = "0.5"





