[package]
name = "bpf-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
tokio = { version = "1.20.0", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
] }
tracing-subscriber = "0.3.14"
tracing = "0.1.35"
tokio-fd = "0.3.0"
simple-dns = "0.4.6"
libc = "0.2"
pnet = { version = "0.29.0", default-features = false }
pnet_base = "0.29.0"
lazy_static = "1.4.0"
tracing-unwrap = "0.9.2"
anyhow = "*"
static_init = "*"
dashmap = "5.3.4"
futures-util = "*"
probe = { path = "../probe" }
dns-parser = "0.8.0"
bollard = { version = "0.12.0", default-features = false }

[build-dependencies]
cargo-bpf = { version = "2.3.0", default-features = false, features = [
    "build",
    "llvm13",
] }
